# verifiable_wallet

./: CMakeLists.txt  DISPLAY_SETUP.md  HANDLING_IMAGE.md  LEARNING.md  README.md  SETUP_AND_SQUARELINE_UI.md  WALLET_RECIPE.md  jwk_to_address.py  platformio.ini  sdkconfig.defaults  sdkconfig.esp32-s3-devkitc-1  sdkconfig.esp32-s3-touch-lcd-35
src/wallet/: CMakeLists.txt  ui.c  ui.h  ui_helpers.c  ui_helpers.h
src/wallet/components/: ui_comp_hook.c
src/wallet/fonts/: ui_font_pixel_heading.c  ui_font_pixel_wordings_small.c
src/wallet/images/: ui_img_backbutton_png.c  ui_img_finishbutton_png.c  ui_img_letsgobutton_png.c  ui_img_nextbutton_png.c  ui_img_profile2_png.c  ui_img_settingsicon_png.c  ui_img_under_image_png.c  ui_img_verification_png.c  ui_img_wallet_png.c  ui_img_wallet_watiting_png.c  ui_img_wifi_enable_png.c  ui_img_wifi_not_enable_png.c
src/wallet/screens/: ui_Screen1.c  ui_Screen1.h  ui_Screen2.c  ui_Screen2.h  ui_Screen3.c  ui_Screen3.h  ui_export_key_screen.c  ui_export_key_screen.h  ui_generating_public_address.c  ui_generating_public_address.h  ui_last_word_count.c  ui_last_word_count.h  ui_new_note_for_word_count.c  ui_new_note_for_word_count.h  ui_note_for_password.c  ui_note_for_password.h  ui_note_for_words_screen.c  ui_note_for_words_screen.h  ui_owner_qr_screen.c  ui_owner_qr_screen.h  ui_password_for_encryption.c  ui_password_for_encryption.h  ui_public_address_qr_screen.c  ui_public_address_qr_screen.h  ui_setting_screen.c  ui_setting_screen.h  (+20 more)
test_project/src/: CMakeLists.txt  idf_component.yml  main.cpp
wallet/: CMakeLists.txt  filelist.txt  project.info  ui.c  ui_events.h  ui_helpers.c  ui_helpers.h
wallet/images/: ui_img_profile2_png.c
wallet/screens/: ui_Screen1.c  ui_Screen2.c
wallet3/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_Screen1.c  ui_Screen1.h  ui_Screen2.c  ui_Screen2.h  ui_Screen3.c  ui_Screen3.h  ui_comp_hook.c  ui_events.h  ui_font_Pixel.c  ui_font_pixel_heading.c  ui_font_pixel_wordings.c  ui_font_pixel_wordings_small.c  ui_helpers.c  ui_helpers.h  ui_img_backbutton_png.c  ui_img_finishbutton_png.c  ui_img_letsgobutton_png.c  ui_img_nextbutton_png.c  ui_img_profile2_png.c  ui_img_settingsicon_png.c  ui_img_under_image_png.c  ui_img_verification_png.c  ui_img_wallet_png.c  ui_img_wallet_watiting_png.c  ui_img_wifi_enable_png.c  ui_img_wifi_not_enable_png.c  ui_last_words_screen.c  ui_last_words_screen.h  ui_new_note_for_word_count.c  ui_new_note_for_word_count.h  ui_note_for_password.c  ui_note_for_password.h  ui_note_for_password_creation.c  ui_note_for_password_creation.h  ui_note_for_words_screen.c  ui_note_for_words_screen.h  (+12 more)
(+1037 files in other folders)
